--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
 </head>
 
 <body>
-    <header>
-
-    </header>
-    <main>
-
-    </main>
-    <footer>
-    </footer>
-
+    form goes here
     <script type="module" src="app.js"></script>
 </body>
 
