TDD on renderSection function

--- a/quest/index.html
+++ b/quest/index.html
@@ -13,8 +13,10 @@
 </head>
 
 <body>
-    quest page
-    <script type="module" src="quest.js"></script>
+    <main>
+
+    </main>
+    <script type="module" src="./quest.js"></script>
 </body>
 
 </html>
