--- a/results/index.html
+++ b/results/index.html
@@ -14,7 +14,7 @@
 
 <body>
     results
-    <script type="module" src="result.js"></script>
+    <script type="module" src="./result.js"></script>
 </body>
 
 </html>
