--- a/map/index.html
+++ b/map/index.html
@@ -14,7 +14,7 @@
 
 <body>
     map page
-    <script type="module" src="map.js"></script>
+    <script type="module" src="./map.js"></script>
 </body>
 
 </html>
