--- a/map/index.html
+++ b/map/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    map page
+    <main>
+        <section>
+            
+        </section>
+    </main>
     <script type="module" src="./map.js"></script>
 </body>
 
