--- a/quest/index.html
+++ b/quest/index.html
@@ -16,6 +16,8 @@
     <main>
 
     </main>
+    <div id="result"></div>
+    <button id="next" class="hidden">Back to Map</button>
     <script type="module" src="./quest.js"></script>
 </body>
 
