--- a/index.html
+++ b/index.html
@@ -13,29 +13,33 @@
 </head>
 
 <body>
-    <form>
-        <label>
-            Name
-            <input name="name" />
-        </label>
-        <label>
-            Wizard
-            <input value="wizard" type="radio" name="class" />
-        </label>
-        <label>
-            Fighter
-            <input value="fighter" type="radio" name="class" />
-        </label>
-        <label>
-            Rogue
-            <input value="rogue" type="radio" name="class" />
-        </label>
-        <label>
-            Cleric
-            <input value="cleric" type="radio" name="class" />
-        </label>
-        <button>Submit</button>
-    </form>
+    <main>
+        <section>
+            <form>
+                <label>
+                    Name
+                    <input name="name" />
+                </label>
+                <label>
+                    Wizard
+                    <input value="wizard" type="radio" name="class" />
+                </label>
+                <label>
+                    Fighter
+                    <input value="fighter" type="radio" name="class" />
+                </label>
+                <label>
+                    Rogue
+                    <input value="rogue" type="radio" name="class" />
+                </label>
+                <label>
+                    Cleric
+                    <input value="cleric" type="radio" name="class" />
+                </label>
+                <button>Submit</button>
+            </form>
+        </section>
+    </main>
     <script type="module" src="./app.js"></script>
 </body>
 
