--- a/results/index.html
+++ b/results/index.html
@@ -13,7 +13,10 @@
 </head>
 
 <body>
-    results
+    <main id="result-main">
+
+    </main>
+    <button id="restart">Play Again!</button>
     <script type="module" src="./result.js"></script>
 </body>
 
